# glow

./: .gitignore  .gitmodules  Cargo.toml  ISSUES.md  PRODUCT_ROADMAP.md  PRODUCT_ROADMAP_V2.md  clippy.toml  commitlint.config.js  deny.toml  eslint.config.js  lefthook.yml  package.json  prettier.config.js  rust-toolchain.toml  rustfmt.toml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  release-bridge.yml
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/src/: app.css  app.html
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/lib/ai/: bridge-config.ts  edit-utils.ts  feedback-service.ts  feedback-state.svelte.ts  index.ts  types.ts
apps/web/src/lib/ai/__tests__/: ai-service.test.ts
apps/web/src/lib/backlinks/: backlink-index.ts  backlink-store.ts  link-parser.ts
apps/web/src/lib/backlinks/__tests__/: backlink-index.test.ts
apps/web/src/lib/clipper/__tests__/: clip-processor.test.ts
apps/web/src/lib/commands/__tests__/: command-registry.test.ts
apps/web/src/lib/comments/: types.ts
apps/web/src/lib/comments/__tests__/: comments-state.test.ts  types.test.ts
apps/web/src/lib/components/: BionicOverlay.svelte  BridgeSetupModal.svelte  BridgeStatusIndicator.svelte  DocumentCard.svelte  DocumentGraph.svelte  DocumentPage.svelte  EditorCanvas.svelte  FloatingToolbar.svelte  GoToPageDialog.svelte  Header.svelte  HomeHeader.svelte  LinkPalette.svelte  MenuBar.svelte  PrintPreview.svelte  SideToolbar.svelte  Sidebar.svelte  StatusBar.svelte  TabContextMenu.svelte  TabItem.svelte  TabsPanel.svelte  Toolbar.svelte
apps/web/src/lib/components/__tests__/: PrintPreview.test.ts  navbar.test.ts  toolbar-functionality.test.ts
apps/web/src/lib/components/comments/: CommentCard.svelte  CommentCardInput.svelte  CommentCardsContainer.svelte  CommentInput.svelte  CommentItem.svelte  CommentPanel.svelte  CommentThread.svelte  ReactionPicker.svelte  index.ts
apps/web/src/lib/components/excalidraw/: ExcalidrawModal.svelte  ExcalidrawNodeView.svelte  ExcalidrawWrapper.svelte
apps/web/src/lib/components/page/: PageFooter.svelte  PageFrame.svelte  PageHeader.svelte  PageViewport.svelte
apps/web/src/lib/components/page/__tests__/: PageViewport.test.ts
apps/web/src/lib/components/rsvp/: RSVPReader.svelte
apps/web/src/lib/daily-notes/__tests__/: daily-note-service.test.ts
apps/web/src/lib/editor/: svelte-node-view.ts
apps/web/src/lib/editor/excalidraw/: excalidraw.d.ts  index.ts
apps/web/src/lib/editor/excalidraw/__tests__/: drawing-anchor.test.ts  drawing-overlay.test.ts  drawing-state.test.ts  drawing-toolbar.test.ts  excalidraw-core.test.ts  excalidraw-node.test.ts  integration.test.ts
apps/web/src/lib/editor/excalidraw/anchors/: anchor-system.ts
apps/web/src/lib/editor/excalidraw/components/: DrawingNodeView.svelte  DrawingOverlay.svelte  DrawingToolbar.svelte  ImageToolbar.svelte  SelectionBorder.svelte
apps/web/src/lib/editor/excalidraw/core/: drawing-state.svelte.ts  excalidraw-core.ts  types.ts
apps/web/src/lib/editor/excalidraw/extension/: excalidraw-node.ts  svelte-node-view-renderer.ts
apps/web/src/lib/editor/extensions/: comment-mark.ts  excalidraw-utils.ts  excalidraw.test.ts  excalidraw.ts  font-size.ts  internal-link.ts  latex.ts  page-break-spacer.ts  page-break.ts
apps/web/src/lib/editor/extensions/__tests__/: comment-mark.test.ts  page-break.test.ts
apps/web/src/lib/editor/latex/: index.ts
apps/web/src/lib/editor/latex/components/: LatexNodeView.svelte
apps/web/src/lib/editor/latex/core/: latex-renderer.ts  types.ts
apps/web/src/lib/editor/plugins/: link-autocomplete.ts  navigation.ts  page-break-spacer.ts
apps/web/src/lib/editor/utils/: content-height.ts  measurement-cache.ts  page-metrics.ts  virtual-renderer.ts
apps/web/src/lib/export/__tests__/: markdown-exporter.test.ts  pdf-exporter.test.ts
apps/web/src/lib/graph/: extract-graph.ts
apps/web/src/lib/search/__tests__/: search-index.test.ts  search-state.test.ts
apps/web/src/lib/share/__tests__/: share-link.test.ts
apps/web/src/lib/state/: backlinks.svelte.ts  bionic.svelte.ts  comments.svelte.ts  document.svelte.ts  documents.svelte.ts  excalidraw.svelte.ts  header-footer.svelte.ts  pagination.svelte.ts  rsvp.svelte.ts  tabs.svelte.ts
apps/web/src/lib/state/__tests__/: header-footer.test.ts  pagination.test.ts
apps/web/src/lib/storage/: comments-db.ts  db.ts
apps/web/src/lib/templates/__tests__/: template-service.test.ts
apps/web/src/lib/types/: links.ts  tabs.ts
apps/web/src/lib/versioning/__tests__/: version-history.test.ts
apps/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/src/routes/doc/[id]/: +page.svelte  +page.ts
apps/web/src/routes/docs/: +layout.svelte  +page.svelte
apps/web/src/routes/docs/drawing/: +page.svelte
apps/web/src/routes/docs/editor/: +page.svelte
apps/web/src/routes/docs/getting-started/: +page.svelte
apps/web/src/routes/docs/shortcuts/: +page.svelte
crates/glow-bridge/: Cargo.toml
crates/glow-bridge/src/: main.rs  server.rs  state.rs
crates/glow-bridge/src/api/: feedback.rs  health.rs  mod.rs
crates/glow-core/: Cargo.toml
crates/glow-core/src/: crdt.rs  document.rs  error.rs  lib.rs
crates/glow-desktop/: Cargo.toml
crates/glow-desktop/src/: commands.rs  error.rs  lib.rs  storage.rs
crates/glow-executors/: Cargo.toml
crates/glow-executors/src/: approvals.rs  env.rs  error.rs  lib.rs  logs.rs  profile.rs  types.rs
crates/glow-executors/src/executors/: mod.rs
crates/glow-executors/src/executors/claude/: log_processor.rs  mod.rs  protocol.rs
crates/glow-server/: Cargo.toml
crates/glow-server/src/: main.rs  state.rs
crates/glow-server/src/routes/: documents.rs  health.rs  mod.rs  sync.rs
crates/glow-wasm/: Cargo.toml
crates/glow-wasm/src/: lib.rs
docs/: AI_FEEDBACK_FEATURE_DESIGN.md  AI_FEEDBACK_SETUP.md  AI_INTEGRATION_SPEC.md  MULTI_PAGE_IMPLEMENTATION_PLAN.md  MULTI_PAGE_SPEC.md
(+6 files in other folders)
