[package]
name = "glow-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local bridge server for Glow AI features - connects static web app to local AI executors"

[lints]
workspace = true

[[bin]]
name = "glow-bridge"
path = "src/main.rs"

[dependencies]
# Internal crates
glow-executors = { path = "../glow-executors" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
