[package]
name = "glow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Glow - shared types, CRDT operations, and document processing"

[lints]
workspace = true

[dependencies]
# CRDT for real-time collaboration
yrs.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
wasm = []
