[package]
name = "glow-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop application library for Glow - Tauri commands and SQLite storage"

[lints]
workspace = true

[dependencies]
glow-core = { path = "../glow-core" }

# Async
tokio.workspace = true

# Database
rusqlite.workspace = true
tokio-rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
