[package]
name = "glow-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cloud server for Glow - REST API and WebSocket sync"

[lints]
workspace = true

[[bin]]
name = "glow-server"
path = "src/main.rs"

[dependencies]
glow-core = { path = "../glow-core" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
